[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "momomail"
dynamic = ["version"]
dependencies = [
    "google-api-python-client", 
    "google-auth-httplib2", 
    "google-auth-oauthlib",
    "pydantic"
]
requires-python = ">=3.10"
authors = [
    {name = "YYLIZH", email = "ryne91009@gmail.com"},
]
description = "Mail Client"
license = {file = "LICENSE"}
keywords = ["gmail"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.dynamic]
version = { attr = "momomail.VERSION" }
readme = { file = ["README.md"], content-type = "text/markdown" }

[project.urls]
Homepage = "https://github.com/YYLIZH/momomail"
Issues = "https://github.com/YYLIZH/momomail/issues"

[tool.setuptools]
packages = [
    "momomail",
    "momomail.gmail",
]